# phenoData

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  STATUS.md  Taskfile.yml  deny.toml  justfile  package.json  spec.md  tarpaulin.toml  trace-gate.toml
.cargo/: audit.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  coverage.yml  doc-links.yml  fr-coverage.yml  gitleaks.yml  pages.yml  quality-gate.yml  sbom-refresh.yml  scorecard.yml  secrets-scan.yml  trufflehog.yml  windows-surreal.yml
crates/async-trait/: Cargo.toml
crates/async-trait/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: errors.rs  lib.rs  types.rs
crates/core/tests/: dataset.rs
crates/pg-bridge/: Cargo.toml
crates/pg-bridge/src/: lib.rs
crates/pg-bridge/tests/: dataset.rs
crates/pheno-data-core/: Cargo.toml
crates/pheno-data-core/src/: lib.rs
crates/pheno-query/: Cargo.toml
crates/pheno-query/src/: lib.rs
crates/pheno-query/tests/: dispatch.rs
crates/smoke-tests/: Cargo.toml
crates/smoke-tests/src/: lib.rs
crates/smoke-tests/tests/: smoke.rs
crates/surreal-bridge/: Cargo.toml
crates/surreal-bridge/src/: lib.rs
crates/surreal-bridge/tests/: dataset.rs
docs/: crates.md  guide.md  index.md  operations.md
docs/.vitepress/: config.mts
docs/sessions/20260608-t1-16-bridge-adapters/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  06_TESTING_STRATEGY.md
docs/sessions/20260608-tier1-hex-t1-18/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md
