# PhenoData - Data Layer Workspace
#
# Contains data-related crates:
# - surreal-bridge: SurrealDB embedded integration
# - pg-bridge: PostgreSQL/pgvector compatibility
# - query: Unified query builder
[workspace]
members = [
    "crates/surreal-bridge",
    "crates/pg-bridge",
    "crates/pheno-query",
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
