# PhenoData - Data Layer Workspace
#
# Contains data-related crates:
# - surreal-bridge: SurrealDB embedded integration
# - pg-bridge: PostgreSQL/pgvector compatibility
# - query: Unified query builder
[workspace]
members = [
    "crates/async-trait",
    "crates/core",
    "crates/surreal-bridge",
    "crates/pg-bridge",
    "crates/pheno-query",
    "crates/smoke-tests",
]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
async-trait = { path = "crates/async-trait" }
