[package]
name = "pheno-data-core"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false
description = "Core dataset traits and records for PhenoData"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
