[package]
name = "pg-bridge"
version = "0.1.0"
edition = "2024"
description = "PostgreSQL/pgvector bridge for Pheno"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
tokio-postgres-rustls = "0.13"
rustls = "0.23"
