[package]
name = "pg-bridge"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false
description = "PostgreSQL/pgvector bridge for Pheno"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
pheno-query = { path = "../pheno-query" }
pheno-data-core = { path = "../core" }
tokio-postgres = { version = "0.7.18", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
tokio-postgres-rustls = "0.14"
rustls = "0.23"
url = "2.5"
