[package]
name = "pheno-query"
version = "0.1.0"
edition = "2024"
license.workspace = true
publish = false
description = "Unified query builder for Pheno"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.4"
