[package]
name = "pheno-query"
version = "0.1.0"
edition = "2024"
description = "Unified query builder for Pheno"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
proptest = { version = "1.4", optional = true }

[dev-dependencies]
proptest = "1.4"

[features]
proptest = ["dep:proptest"]
